Added some more basic structure

--- a/.drone.yml
+++ b/.drone.yml
@@ -2,11 +2,21 @@ workspace:
   base: /srv/app
   path: src/github.com/gopad/homebrew-gopad
 
+branches:
+  - master
+
 pipeline:
-  cache-restore:
-    image: plugins/s3-cache:1
+  test-formula:
+    image: webhippie/ruby:latest
     pull: true
-    secrets: [ cache_s3_endpoint, cache_s3_access_key, cache_s3_secret_key ]
-    restore: true
+    commands:
+      - rake test
+
+  notify-matrix:
+    image: plugins/matrix:1
+    pull: true
+    secrets: [ matrix_roomid, matrix_userid, matrix_accesstoken ]
     when:
       local: false
+      events: [ push, tag ]
+      status: [ changed, failure ]
