--- a/.editorconfig
+++ b/.editorconfig
@@ -31,5 +31,9 @@ indent_size = 2
 indent_style = space
 indent_size = 2
 
+[*.rb]
+indent_style = space
+indent_size = 2
+
 [*.md]
 trim_trailing_whitespace = true
