Use matrix username and password for drone notifications

--- a/.drone.yml
+++ b/.drone.yml
@@ -15,7 +15,7 @@ pipeline:
   notify-matrix:
     image: plugins/matrix:1
     pull: true
-    secrets: [ matrix_roomid, matrix_userid, matrix_accesstoken ]
+    secrets: [ matrix_roomid, matrix_username, matrix_password ]
     when:
       local: false
       events: [ push, tag ]
