ci: fix naming within settings

--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -1,7 +1,7 @@
 ---
 repository:
   name: homebrew-gopad
-  description: "Gopad: Gopad"
+  description: "Gopad: Homebrew"
   homepage: https://gopad.eu
   topics: gopad, etherpad, homebrew, brew, formula
 
