--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -11,7 +11,7 @@ name: general
 
 jobs:
   testing:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout source
@@ -22,7 +22,7 @@ jobs:
         id: ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 3.1.2
+          ruby-version: 3.1
           bundler-cache: true
 
       - name: Run rubocop
