--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,43 +1,15 @@
 {
   "extends": [
-    "config:base",
-    ":semanticCommits",
-    ":semanticCommitType(deps)",
-    ":automergeMinor"
+      "config:base",
+      ":semanticCommits",
+      ":semanticCommitType(deps)",
+      ":automergeMajor",
+      ":automergeMinor",
+      ":automergePatch",
+      ":prConcurrentLimitNone"
   ],
-  "packageRules": [
-    {
-      "description": "Semantic commits for major versions",
-      "groupName": "major versions",
-      "matchUpdateTypes": [
-        "major"
-      ],
-      "semanticCommitType": "deps",
-      "semanticCommitScope": "major",
-      "automerge": true
-    },
-    {
-      "description": "Semantic commits for minor versions",
-      "groupName": "minor versions",
-      "matchUpdateTypes": [
-        "minor"
-      ],
-      "semanticCommitType": "deps",
-      "semanticCommitScope": "minor",
-      "automerge": true
-    },
-    {
-      "description": "Semantic commits for patch updates",
-      "groupName": "patch updates",
-      "matchUpdateTypes": [
-        "patch"
-      ],
-      "semanticCommitType": "deps",
-      "semanticCommitScope": "patch",
-      "automerge": true
-    }
-  ],
+  "packageRules": [],
   "labels": [
-    "renovate"
+      "renovate"
   ]
 }
