--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -10,13 +10,15 @@ name: general
     branches:
       - master
 
+permissions:
+  contents: read
+
 jobs:
   testing:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout source
-        id: source
         uses: actions/checkout@v5
 
       - name: Setup ruby
